# CppLearning

./: .gitignore  C++.docx  Git-workflow.txt  README.md
002/: CMakeLists.txt  main.cpp
Patterns/: CMakeLists.txt  Names.h  Team.cpp  Team.h  Test.cpp  Test.h  main.cpp  std_lib_facilities.h
Patterns/Docs/: Commands  FactoryMethod  Hot keys  Sample
Patterns/Factories/: FieldplayerFactory.cpp  FieldplayerFactory.h  GoalkeeperFactory.cpp  GoalkeeperFactory.h  PlayerFactory.cpp  PlayerFactory.h
Patterns/Players/: FieldPlayer.cpp  FieldPlayer.h  Goalkeeper.cpp  Goalkeeper.h  PersonNames.h  Player.cpp  Player.h  Team.cpp  Team.h
Persons/workspace/: Sapmles.txt  list.cpp  list.h  main.cpp  primary.cpp  service.cpp
Python/: Заготовки - 1.txt
